<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffededed">

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/take_a_photo"
        android:textColor="#ff2c43ff"
        android:background="#ffffffff"
        android:clickable="true"
        android:enabled="true" />

    <Button
        android:id="@+id/btnTakeVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/take_a_video"
        android:textColor="#ff2c43ff"
        android:background="#ffffffff"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:enabled="true" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="#ff2c43ff"
        android:background="#ffffffff"
        android:clickable="true"
        android:enabled="true" />

</LinearLayout>
