<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/bgLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/headerLayout"
            android:alpha="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/say_something"
                android:id="@+id/titleLabel"
                android:layout_alignParentTop="false"
                android:textColor="#ffffffff"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/btnBack"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/backbutton"
                android:scaleType="fitXY"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/btnDoneLayout"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:scaleType="fitXY" >

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnDone"
                    android:src="@drawable/button_circle_white"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:padding="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/done"
                    android:id="@+id/doneLabel"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="13sp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/contentLayout"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/headerLayout"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:alpha="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/press_and_hold"
                android:id="@+id/textView4"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:gravity="center_horizontal" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnHoldLayout"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:background="@android:color/transparent">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnHold"
                    android:src="@drawable/btn_record"
                    android:background="@android:color/transparent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/hold"
                    android:id="@+id/textView5"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_centerInParent="true"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="00 : 00 : 00"
                android:id="@+id/timeLabel"
                android:layout_above="@+id/btnHoldLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:textSize="40sp" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
