<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/headerLayout"
        android:alpha="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/where_are_you"
            android:id="@+id/titleLabel"
            android:layout_alignParentTop="false"
            android:textColor="#ffffffff"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/btnBack"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/backbutton"
            android:scaleType="fitXY"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/btnDoneLayout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY" >

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btnDone"
                android:src="@drawable/button_circle_white"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/done"
                android:id="@+id/doneLabel"
                android:layout_centerInParent="true"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="13sp" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbarLayout"
        android:layout_below="@+id/headerLayout"
        android:background="#ffffff">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNearby"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnSearchNearby"
            android:hint="@string/search_place_nearby" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btnSearchNearby"
            android:background="@android:color/transparent"
            android:src="@drawable/checkin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnUserLocation" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btnUserLocation"
            android:background="@android:color/transparent"
            android:src="@drawable/userlocation"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLayout"
        class="com.google.android.gms.maps.SupportMapFragment" />

</RelativeLayout>