<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.roomapp.room.activity.RARegisterPhoneActivity"
    android:id="@+id/regphRootLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/regphbgLayout">

        <co.roomapp.room.widget.RALabelTitleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_raregister_phone"
            android:id="@+id/roomTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:focusable="false"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/imageView"
            android:layout_marginTop="11dp"
            android:background="#FFFFFF"
            android:layout_below="@+id/roomTitle"
            android:layout_centerHorizontal="true" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="52dp"
            android:id="@+id/linearLayout"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <TextView
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:text="+1"
                android:id="@+id/indicatif"
                android:textStyle="normal"
                android:layout_below="@+id/imageView"
                android:layout_alignLeft="@+id/roomTitle"
                android:layout_alignStart="@+id/roomTitle"
                android:textSize="20dp"
                style="@style/navigationTitle"
                android:gravity="right"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtName"
                android:phoneNumber="true"
                android:textSize="20dp"
                android:textIsSelectable="true"
                android:textColor="#FFFFFF"
                android:textCursorDrawable="@null"
                android:autoText="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:editable="false"
                android:enabled="true"
                android:clickable="true"
                android:background="@null" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flag"
                android:src="@drawable/zflag_us"
                android:contentDescription="@string/flag"
                android:layout_gravity="center_vertical|left" />

            <Space
                android:layout_width="40px"
                android:layout_height="fill_parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/rightarrow"
                android:layout_gravity="center_vertical" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_selectcode"
                android:background="@null"
                android:layout_marginLeft="-70dp"
                android:layout_gravity="center_vertical|right" />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_and_agree_with_terms_and_privacy"
            android:id="@+id/checkBox"
            android:checked="true"
            android:textSize="13sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:button="@drawable/custom_checkbox"
            android:paddingStart="10dp" />

        <Button
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:text="Next"
            android:id="@+id/next"
            android:background="@drawable/btn_circle_white_bg"
            android:textColor="@color/raBlue"
            android:textStyle="normal"
            android:layout_below="@+id/checkBox"
            android:layout_alignRight="@+id/checkBox"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_marginTop="28dp"
            android:visibility="invisible"
            android:layout_marginRight="-10dp" />

    </RelativeLayout>



    <view
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        class="co.wheelpicker.WheelView"
        android:id="@+id/countryPickerView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dismissPicker"
        android:layout_above="@+id/countryPickerView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/clearwhite"
        android:background="@android:color/transparent"
        android:paddingLeft="8dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp" />


</RelativeLayout>
